# Quixer

./: .gitignore  README.md  ctransformer.py  define_qlm.py  model.py  pyproject.toml  readme.md  requirements.txt  run.py  run_comprehensive.py
quixer/: baseline_models.py  quixer_model.py  setup_training.py
